ajuste de conteúdo/estilo

--- a/index.html
+++ b/index.html
@@ -4,18 +4,13 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- SEO -->
-<title>Guilherme Suporte TI — Suporte, CS e Automação</title>
-<meta name="description" content="Implantação de SaaS, SIP/VoIP e integrações com APIs (WhatsApp/Meta). Playbooks de CS e documentação com SLA." />
-<meta name="theme-color" content="#0a0a0a" />
-<meta name="color-scheme" content="dark light" />
-
-<!-- Open Graph / Social -->
-<meta property="og:type" content="website" />
-<meta property="og:title" content="Guilherme Suporte TI — Suporte, CS e Automação" />
-<meta property="og:description" content="Implantação de SaaS, SIP/VoIP e integrações com APIs. CS orientado a métricas." />
-<meta property="og:url" content="https://www.seu-dominio.com.br/" />
-<meta property="og:image" content="https://www.seu-dominio.com.br/android-chrome-512x512.png" />
-<meta name="twitter:card" content="summary_large_image" />
+<title>AschiTec — Criação de Sites e Apps</title>
+<meta name="description" content="Desenvolvedor Jr. Criação de sites e apps com React/Vite. Deploy Vercel, domínio e SSL. Solicite um orçamento.">
+<link rel="canonical" href="https://www.aschitec.com.br/">
+<meta property="og:url" content="https://www.aschitec.com.br/">
+<meta property="og:title" content="AschiTec — Criação de Sites e Apps">
+<meta property="og:description" content="Sites, apps e integrações com APIs. Solicite um orçamento.">
+<meta property="og:image" content="/og-image.png">
 
     <link rel="icon" href="/favicon.ico">
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
